# Adp-Api-Client

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  client.py  index.html  logger.py  main.py  mkdocs.yml  monofile.ipynb  objects.inv  pyproject.toml  sessions.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
monofile-generator/: README.md  config.yaml  generate-monofile.py
reference/: index.html
src/: client.py
src/adpapi/: __init__.py  client.py  logger.py  odata_filters.py  sessions.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_call_rest_endpoint.py  test_client.py  test_logger.py  test_odata_filters.py  test_sessions.py
tutorials/: index.html
