[project]
name = "adpapi"
version = "1.0.1"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    {name = "Joey Russoniello", email = "jmrusso@bu.edu"}
]
classifiers = [
    'Programming Language :: Python :: 3.10', 
    'Programming Language :: Python :: 3.11', 
    'Operating System :: OS Independent', 
    'Intended Audience :: Developers', 
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/JoeyRussoniello/Adp-Api-Client"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3", 'pytest>=7.0.0', 'pytest-cov>=4.0.0',
]
optional = [
    'black>=22.0.0', 'flake8>=4.0.0'
]

[tool.pytest.ini_options]
markers = [
    "golden: Integration tests requiring real API credentials (skipped by default)"
]

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]
# pythonpath = [
#     "src/adpapi",
# ]
