[project]
name = "adpapi"
version = "1.4.2"
description = "A small python SDK for the ADP Workforce Now API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    {name = "Joey Russoniello", email = "jmrusso@bu.edu"}
]
classifiers = [
    'Programming Language :: Python :: 3.10', 
    'Programming Language :: Python :: 3.11', 
    'Operating System :: OS Independent', 
    'Intended Audience :: Developers', 
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/JoeyRussoniello/Adp-Api-Client"
Documentation = "https://JoeyRussoniello.github.io/Adp-Api-Client/"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    'pytest>=7.0.0',
    'pytest-cov>=4.0.0',
    "build>=1.4.0",
    "mkdocstrings[python]>=1.0.1",
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.2",
]
optional = [
    'black>=22.0.0', 'flake8>=4.0.0'
]

[tool.pytest.ini_options]
markers = [
    "golden: Integration tests requiring real API credentials (skipped by default)"
]
