[project]
name = "adpapi"
version = "1.4.3"
description = "A small python SDK for the ADP Workforce Now API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Joey Russoniello", email = "jmrusso@bu.edu"}
]
keywords = ["adp", "api", "client", "sdk", "workforce", "hr", "oauth2", "mtls"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Natural Language :: English',
    'Typing :: Typed',
]
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/JoeyRussoniello/Adp-Api-Client"
Documentation = "https://JoeyRussoniello.github.io/Adp-Api-Client/"
Source = "https://github.com/JoeyRussoniello/Adp-Api-Client"
"Issue Tracker" = "https://github.com/JoeyRussoniello/Adp-Api-Client/issues"
Changelog = "https://github.com/JoeyRussoniello/Adp-Api-Client/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    'pytest>=7.0.0',
    'pytest-cov>=4.0.0',
    "build>=1.4.0",
    "mkdocstrings[python]>=1.0.1",
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "types-requests>=2.31.0",
]
optional = [
    'black>=22.0.0', 'flake8>=4.0.0'
]

[tool.pytest.ini_options]
markers = [
    "golden: Integration tests requiring real API credentials (skipped by default)"
]

[tool.mypy]
mypy_path = "src"
packages = ["adpapi"]

[tool.ruff]
line-length = 100
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["adpapi"]
